# PDFium4j

./: .gitignore  PUBLISHING.md  README.md  build.gradle.kts  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: build.gradle.kts
benchmarks/src/jmh/java/org/grimmory/pdfium4j/benchmark/: PdfBenchmark.java
config/spotbugs/: exclude.xml
pdfium4j-natives-linux-x64/: build.gradle.kts
pdfium4j-natives-linux-x64/src/main/resources/natives/linux-x64/: native-libs.txt
scratch/: CheckLayouts.java  TestAlloc.java  TestFd.java  TestMemcpy.java  TestStableValue.java
shim/: CMakeLists.txt
shim/include/: pdfium4j_shim.h
shim/src/: pdfium4j_doc.cpp  pdfium4j_meta.cpp  pdfium4j_read.cpp  pdfium4j_save.cpp  pdfium4j_utils.cpp  pdfium4j_utils.h  pdfium4j_write.cpp
src/main/java/org/grimmory/pdfium4j/: BookmarkReader.java  KoReaderChecksum.java  PdfDocument.java  PdfDocumentOpener.java  PdfPage.java  PdfSaver.java  PdfiumLibrary.java  StructureTreeReader.java  XmpMetadataParser.java  XmpMetadataWriter.java
src/main/java/org/grimmory/pdfium4j/exception/: NativeLoadException.java  PdfCorruptException.java  PdfPasswordException.java  PdfUnsupportedSecurityException.java  PdfiumException.java  PdfiumRenderException.java
src/main/java/org/grimmory/pdfium4j/internal/: AnnotBindings.java  AttachmentBindings.java  BitmapBindings.java  DocBindings.java  EditBindings.java  FfmHelper.java  Generators.java  IntObjectCache.java  InternalLogger.java  IoUtils.java  NativeLoader.java  NoAllocationPathProbe.java  PdfDocumentAttachments.java  PdfDocumentFallbackMeta.java  PdfDocumentIndexer.java  PdfDocumentMetadata.java  PdfDocumentNativeSaver.java  PdfDocumentSignatures.java  PdfDocumentXmp.java  ScratchBuffer.java  SegmentOutputStream.java  ShimBindings.java  SignatureBindings.java  TextBindings.java  ThumbnailBindings.java  TrigramTokenizer.java  ViewBindings.java  XmpUpdate.java
src/main/java/org/grimmory/pdfium4j/model/: AnnotationType.java  BookMetadata.java  Bookmark.java  EmbeddedImage.java  MetadataTag.java  NativeBitmap.java  PageSize.java  PdfAnnotation.java  PdfAttachment.java  PdfBookMetadata.java  PdfDiagnostic.java  PdfErrorCode.java  PdfLink.java  PdfProbeResult.java  PdfProcessingPolicy.java  PdfSignature.java  PdfStructureElement.java  RenderFlags.java  RenderResult.java  SaveOptions.java  TextCharInfo.java  XmpMetadata.java
src/main/java/org/grimmory/pdfium4j/util/: PdfDateUtils.java
src/main/java/org/pdfium4j/: BookmarkReader.java  KoReaderChecksum.java  PdfDocument.java  PdfPage.java  PdfSaver.java  PdfiumLibrary.java  XmpMetadataParser.java  XmpMetadataWriter.java
src/main/java/org/pdfium4j/exception/: NativeLoadException.java  PdfCorruptException.java  PdfPasswordException.java  PdfiumException.java
src/main/java/org/pdfium4j/internal/: AnnotBindings.java  BitmapBindings.java  DocBindings.java  EditBindings.java  FfmHelper.java  NativeLoader.java  TextBindings.java  ViewBindings.java
src/main/java/org/pdfium4j/model/: AnnotationType.java  BookMetadata.java  Bookmark.java  MetadataTag.java  PageSize.java  PdfAnnotation.java  PdfBookMetadata.java  PdfDiagnostic.java  PdfErrorCode.java  PdfLink.java  PdfProbeResult.java  PdfProcessingPolicy.java  RenderFlags.java  RenderResult.java  TextCharInfo.java  XmpMetadata.java
src/test/java/org/grimmory/pdfium4j/: CorpusMetadataRoundTripTest.java  CorpusNoAllocationTest.java  CorpusRealisticMetadataTest.java  FullCorpusStressTest.java  KoReaderChecksumTest.java  MetadataIntegrityTest.java  ModernApiTest.java  NativeSmokeTest.java  NoAllocationAsserter.java  PathologicalPdfTest.java  PdfBookmarkAllocationTest.java  PdfDocumentErrorMappingTest.java  PdfDocumentTest.java  PdfInputStreamTest.java  PdfOpenReadAllocationTest.java  PdfPageRenderSafeTest.java  PdfPageTextAllocationTest.java  PdfPrefetchTest.java  PdfRenderAllocationTest.java  PdfRepairAllocationTest.java  PdfSaveAllocationTest.java  PdfStreamAllocationTest.java  PdfStructureTreeAllocationTest.java  RepairVerificationTest.java  ShimStructureTreeTest.java  ShimXmpTest.java  TextIndexTest.java  XmpMetadataParserTest.java  XmpMetadataRoundtripTest.java  ZeroAllocationCallbackAllocationTest.java  ZeroCopyRenderTest.java
src/test/java/org/grimmory/pdfium4j/internal/: FfmHelperTest.java  IntObjectCacheTest.java  ScratchBufferTest.java  TrigramTokenizerAllocationTest.java
src/test/java/org/grimmory/pdfium4j/util/: AllocationTestUtils.java  PdfDateUtilsTest.java
src/test/java/org/pdfium4j/: KoReaderChecksumTest.java  PathologicalPdfTest.java  PdfDocumentTest.java  XmpMetadataParserTest.java
